--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,18 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  margin-top: 100px;
 }
 
-.App-link {
-  color: #09d3ac;
+.calc-wrapper{
+  width: 400px;
+  height: 600px;
+}
+
+.row{
+  display: flex;
+  widthL: 100%;
 }
